Adds pi and tau calculations
